part2 semantic errors/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program_helper -> declaration program_helper
Rule 2     program_helper -> definition program_helper
Rule 3     program_helper -> declaration
Rule 4     program_helper -> definition
Rule 5     program -> program_helper
Rule 6     declaration -> DECL VARIABLE LPAREN arguments RPAREN type
Rule 7     declaration -> DECL VARIABLE LPAREN empty_args RPAREN type
Rule 8     definition -> DEF VARIABLE LPAREN arguments RPAREN type LBRACE def_block return RBRACE
Rule 9     definition -> DEF VARIABLE LPAREN empty_args RPAREN type LBRACE def_block return RBRACE
Rule 10    type -> COLON TYPE_INT
Rule 11    type -> COLON TYPE_FLOAT
Rule 12    type -> COLON TYPE_VOID
Rule 13    type -> COLON TYPE_STRING
Rule 14    type -> COLON TYPE_BOOLEAN
Rule 15    array_type -> COLON LBRACKET TYPE_INT RBRACKET
Rule 16    array_type -> COLON LBRACKET TYPE_FLOAT RBRACKET
Rule 17    array_type -> COLON LBRACKET TYPE_VOID RBRACKET
Rule 18    array_type -> COLON LBRACKET TYPE_STRING RBRACKET
Rule 19    array_type -> COLON LBRACKET TYPE_BOOLEAN RBRACKET
Rule 20    empty -> <empty>
Rule 21    empty_args -> <empty>
Rule 22    empty_args_inv -> <empty>
Rule 23    args -> VARIABLE type COMMA args
Rule 24    args -> VARIABLE type
Rule 25    arguments -> args
Rule 26    args_inv -> expression COMMA args_inv
Rule 27    args_inv -> expression
Rule 28    arguments_funinvocation -> args_inv
Rule 29    arguments_funinvocation -> empty_args_inv
Rule 30    stats -> statment
Rule 31    stats -> statment stats
Rule 32    statments -> stats
Rule 33    def_stats -> def_statment
Rule 34    def_stats -> def_statment def_stats
Rule 35    def_statments -> def_stats
Rule 36    def_statment -> statment_expression
Rule 37    def_statment -> if
Rule 38    def_statment -> while
Rule 39    def_statment -> var_decl
Rule 40    def_statment -> var_assign
Rule 41    def_statment -> array_decl
Rule 42    def_statment -> array_assign
Rule 43    block -> LBRACE statments RBRACE
Rule 44    block -> LBRACE empty RBRACE
Rule 45    def_block -> def_statments
Rule 46    def_block -> empty
Rule 47    statment -> return
Rule 48    statment -> statment_expression
Rule 49    statment -> if
Rule 50    statment -> while
Rule 51    statment -> var_decl
Rule 52    statment -> var_assign
Rule 53    statment -> array_decl
Rule 54    statment -> array_assign
Rule 55    return -> RETURN empty_args SEMICOLON
Rule 56    return -> RETURN expression SEMICOLON
Rule 57    statment_expression -> expression SEMICOLON
Rule 58    if -> IF expression block else
Rule 59    if -> IF expression block empty
Rule 60    else -> ELSE block
Rule 61    while -> WHILE expression block
Rule 62    var_decl -> VARIABLE type EQUALS expression SEMICOLON
Rule 63    array_decl -> VARIABLE array_type SEMICOLON
Rule 64    var_assign -> VARIABLE EQUALS expression SEMICOLON
Rule 65    array_assign -> VARIABLE LBRACKET expression RBRACKET EQUALS expression SEMICOLON
Rule 66    expression -> expression PLUS expression
Rule 67    expression -> expression MINUS expression
Rule 68    expression -> expression TIMES expression
Rule 69    expression -> expression DIVIDE expression
Rule 70    expression -> expression MOD expression
Rule 71    expression -> expression AND expression
Rule 72    expression -> expression OR expression
Rule 73    expression -> expression EQUALS_EQUALS expression
Rule 74    expression -> expression NOT_EQUALS expression
Rule 75    expression -> expression GREATER expression
Rule 76    expression -> expression LESS expression
Rule 77    expression -> expression GREATER_EQUAL expression
Rule 78    expression -> expression LESS_EQUAL expression
Rule 79    expression -> MINUS expression
Rule 80    expression -> LPAREN expression RPAREN
Rule 81    expression -> FLOAT
Rule 82    expression -> INT
Rule 83    expression -> STRING
Rule 84    expression -> VARIABLE
Rule 85    expression -> TRUE
Rule 86    expression -> FALSE
Rule 87    expression -> NOT_UNARY expression
Rule 88    expression -> VARIABLE LBRACKET expression RBRACKET
Rule 89    expression -> GETARRAY LBRACKET expression RBRACKET
Rule 90    expression -> VARIABLE LPAREN arguments_funinvocation RPAREN

Terminals, with rules where they appear

AND                  : 71
COLON                : 10 11 12 13 14 15 16 17 18 19
COMMA                : 23 26
DECL                 : 6 7
DEF                  : 8 9
DIVIDE               : 69
ELSE                 : 60
EQUALS               : 62 64 65
EQUALS_EQUALS        : 73
FALSE                : 86
FLOAT                : 81
GETARRAY             : 89
GREATER              : 75
GREATER_EQUAL        : 77
IF                   : 58 59
INT                  : 82
LBRACE               : 8 9 43 44
LBRACKET             : 15 16 17 18 19 65 88 89
LESS                 : 76
LESS_EQUAL           : 78
LPAREN               : 6 7 8 9 80 90
MINUS                : 67 79
MOD                  : 70
NOT_EQUALS           : 74
NOT_UNARY            : 87
OR                   : 72
PLUS                 : 66
RBRACE               : 8 9 43 44
RBRACKET             : 15 16 17 18 19 65 88 89
RETURN               : 55 56
RPAREN               : 6 7 8 9 80 90
SEMICOLON            : 55 56 57 62 63 64 65
STRING               : 83
TIMES                : 68
TRUE                 : 85
TYPE_BOOLEAN         : 14 19
TYPE_FLOAT           : 11 16
TYPE_INT             : 10 15
TYPE_STRING          : 13 18
TYPE_VOID            : 12 17
VARIABLE             : 6 7 8 9 23 24 62 63 64 65 84 88 90
WHILE                : 61
error                : 

Nonterminals, with rules where they appear

args                 : 23 25
args_inv             : 26 28
arguments            : 6 8
arguments_funinvocation : 90
array_assign         : 42 54
array_decl           : 41 53
array_type           : 63
block                : 58 59 60 61
declaration          : 1 3
def_block            : 8 9
def_statment         : 33 34
def_statments        : 45
def_stats            : 34 35
definition           : 2 4
else                 : 58
empty                : 44 46 59
empty_args           : 7 9 55
empty_args_inv       : 29
expression           : 26 27 56 57 58 59 61 62 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79 80 87 88 89
if                   : 37 49
program              : 0
program_helper       : 1 2 5
return               : 8 9 47
statment             : 30 31
statment_expression  : 36 48
statments            : 43
stats                : 31 32
type                 : 6 7 8 9 23 24 62
var_assign           : 40 52
var_decl             : 39 51
while                : 38 50

Parsing method: LALR

state 0

    (0) S' -> . program
    (5) program -> . program_helper
    (1) program_helper -> . declaration program_helper
    (2) program_helper -> . definition program_helper
    (3) program_helper -> . declaration
    (4) program_helper -> . definition
    (6) declaration -> . DECL VARIABLE LPAREN arguments RPAREN type
    (7) declaration -> . DECL VARIABLE LPAREN empty_args RPAREN type
    (8) definition -> . DEF VARIABLE LPAREN arguments RPAREN type LBRACE def_block return RBRACE
    (9) definition -> . DEF VARIABLE LPAREN empty_args RPAREN type LBRACE def_block return RBRACE

    DECL            shift and go to state 5
    DEF             shift and go to state 6

    program                        shift and go to state 1
    program_helper                 shift and go to state 2
    declaration                    shift and go to state 3
    definition                     shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (5) program -> program_helper .

    $end            reduce using rule 5 (program -> program_helper .)


state 3

    (1) program_helper -> declaration . program_helper
    (3) program_helper -> declaration .
    (1) program_helper -> . declaration program_helper
    (2) program_helper -> . definition program_helper
    (3) program_helper -> . declaration
    (4) program_helper -> . definition
    (6) declaration -> . DECL VARIABLE LPAREN arguments RPAREN type
    (7) declaration -> . DECL VARIABLE LPAREN empty_args RPAREN type
    (8) definition -> . DEF VARIABLE LPAREN arguments RPAREN type LBRACE def_block return RBRACE
    (9) definition -> . DEF VARIABLE LPAREN empty_args RPAREN type LBRACE def_block return RBRACE

    $end            reduce using rule 3 (program_helper -> declaration .)
    DECL            shift and go to state 5
    DEF             shift and go to state 6

    declaration                    shift and go to state 3
    program_helper                 shift and go to state 7
    definition                     shift and go to state 4

state 4

    (2) program_helper -> definition . program_helper
    (4) program_helper -> definition .
    (1) program_helper -> . declaration program_helper
    (2) program_helper -> . definition program_helper
    (3) program_helper -> . declaration
    (4) program_helper -> . definition
    (6) declaration -> . DECL VARIABLE LPAREN arguments RPAREN type
    (7) declaration -> . DECL VARIABLE LPAREN empty_args RPAREN type
    (8) definition -> . DEF VARIABLE LPAREN arguments RPAREN type LBRACE def_block return RBRACE
    (9) definition -> . DEF VARIABLE LPAREN empty_args RPAREN type LBRACE def_block return RBRACE

    $end            reduce using rule 4 (program_helper -> definition .)
    DECL            shift and go to state 5
    DEF             shift and go to state 6

    definition                     shift and go to state 4
    program_helper                 shift and go to state 8
    declaration                    shift and go to state 3

state 5

    (6) declaration -> DECL . VARIABLE LPAREN arguments RPAREN type
    (7) declaration -> DECL . VARIABLE LPAREN empty_args RPAREN type

    VARIABLE        shift and go to state 9


state 6

    (8) definition -> DEF . VARIABLE LPAREN arguments RPAREN type LBRACE def_block return RBRACE
    (9) definition -> DEF . VARIABLE LPAREN empty_args RPAREN type LBRACE def_block return RBRACE

    VARIABLE        shift and go to state 10


state 7

    (1) program_helper -> declaration program_helper .

    $end            reduce using rule 1 (program_helper -> declaration program_helper .)


state 8

    (2) program_helper -> definition program_helper .

    $end            reduce using rule 2 (program_helper -> definition program_helper .)


state 9

    (6) declaration -> DECL VARIABLE . LPAREN arguments RPAREN type
    (7) declaration -> DECL VARIABLE . LPAREN empty_args RPAREN type

    LPAREN          shift and go to state 11


state 10

    (8) definition -> DEF VARIABLE . LPAREN arguments RPAREN type LBRACE def_block return RBRACE
    (9) definition -> DEF VARIABLE . LPAREN empty_args RPAREN type LBRACE def_block return RBRACE

    LPAREN          shift and go to state 12


state 11

    (6) declaration -> DECL VARIABLE LPAREN . arguments RPAREN type
    (7) declaration -> DECL VARIABLE LPAREN . empty_args RPAREN type
    (25) arguments -> . args
    (21) empty_args -> .
    (23) args -> . VARIABLE type COMMA args
    (24) args -> . VARIABLE type

    RPAREN          reduce using rule 21 (empty_args -> .)
    VARIABLE        shift and go to state 13

    arguments                      shift and go to state 14
    empty_args                     shift and go to state 15
    args                           shift and go to state 16

state 12

    (8) definition -> DEF VARIABLE LPAREN . arguments RPAREN type LBRACE def_block return RBRACE
    (9) definition -> DEF VARIABLE LPAREN . empty_args RPAREN type LBRACE def_block return RBRACE
    (25) arguments -> . args
    (21) empty_args -> .
    (23) args -> . VARIABLE type COMMA args
    (24) args -> . VARIABLE type

    RPAREN          reduce using rule 21 (empty_args -> .)
    VARIABLE        shift and go to state 13

    arguments                      shift and go to state 17
    empty_args                     shift and go to state 18
    args                           shift and go to state 16

state 13

    (23) args -> VARIABLE . type COMMA args
    (24) args -> VARIABLE . type
    (10) type -> . COLON TYPE_INT
    (11) type -> . COLON TYPE_FLOAT
    (12) type -> . COLON TYPE_VOID
    (13) type -> . COLON TYPE_STRING
    (14) type -> . COLON TYPE_BOOLEAN

    COLON           shift and go to state 20

    type                           shift and go to state 19

state 14

    (6) declaration -> DECL VARIABLE LPAREN arguments . RPAREN type

    RPAREN          shift and go to state 21


state 15

    (7) declaration -> DECL VARIABLE LPAREN empty_args . RPAREN type

    RPAREN          shift and go to state 22


state 16

    (25) arguments -> args .

    RPAREN          reduce using rule 25 (arguments -> args .)


state 17

    (8) definition -> DEF VARIABLE LPAREN arguments . RPAREN type LBRACE def_block return RBRACE

    RPAREN          shift and go to state 23


state 18

    (9) definition -> DEF VARIABLE LPAREN empty_args . RPAREN type LBRACE def_block return RBRACE

    RPAREN          shift and go to state 24


state 19

    (23) args -> VARIABLE type . COMMA args
    (24) args -> VARIABLE type .

    COMMA           shift and go to state 25
    RPAREN          reduce using rule 24 (args -> VARIABLE type .)


state 20

    (10) type -> COLON . TYPE_INT
    (11) type -> COLON . TYPE_FLOAT
    (12) type -> COLON . TYPE_VOID
    (13) type -> COLON . TYPE_STRING
    (14) type -> COLON . TYPE_BOOLEAN

    TYPE_INT        shift and go to state 26
    TYPE_FLOAT      shift and go to state 27
    TYPE_VOID       shift and go to state 28
    TYPE_STRING     shift and go to state 29
    TYPE_BOOLEAN    shift and go to state 30


state 21

    (6) declaration -> DECL VARIABLE LPAREN arguments RPAREN . type
    (10) type -> . COLON TYPE_INT
    (11) type -> . COLON TYPE_FLOAT
    (12) type -> . COLON TYPE_VOID
    (13) type -> . COLON TYPE_STRING
    (14) type -> . COLON TYPE_BOOLEAN

    COLON           shift and go to state 20

    type                           shift and go to state 31

state 22

    (7) declaration -> DECL VARIABLE LPAREN empty_args RPAREN . type
    (10) type -> . COLON TYPE_INT
    (11) type -> . COLON TYPE_FLOAT
    (12) type -> . COLON TYPE_VOID
    (13) type -> . COLON TYPE_STRING
    (14) type -> . COLON TYPE_BOOLEAN

    COLON           shift and go to state 20

    type                           shift and go to state 32

state 23

    (8) definition -> DEF VARIABLE LPAREN arguments RPAREN . type LBRACE def_block return RBRACE
    (10) type -> . COLON TYPE_INT
    (11) type -> . COLON TYPE_FLOAT
    (12) type -> . COLON TYPE_VOID
    (13) type -> . COLON TYPE_STRING
    (14) type -> . COLON TYPE_BOOLEAN

    COLON           shift and go to state 20

    type                           shift and go to state 33

state 24

    (9) definition -> DEF VARIABLE LPAREN empty_args RPAREN . type LBRACE def_block return RBRACE
    (10) type -> . COLON TYPE_INT
    (11) type -> . COLON TYPE_FLOAT
    (12) type -> . COLON TYPE_VOID
    (13) type -> . COLON TYPE_STRING
    (14) type -> . COLON TYPE_BOOLEAN

    COLON           shift and go to state 20

    type                           shift and go to state 34

state 25

    (23) args -> VARIABLE type COMMA . args
    (23) args -> . VARIABLE type COMMA args
    (24) args -> . VARIABLE type

    VARIABLE        shift and go to state 13

    args                           shift and go to state 35

state 26

    (10) type -> COLON TYPE_INT .

    COMMA           reduce using rule 10 (type -> COLON TYPE_INT .)
    RPAREN          reduce using rule 10 (type -> COLON TYPE_INT .)
    DECL            reduce using rule 10 (type -> COLON TYPE_INT .)
    DEF             reduce using rule 10 (type -> COLON TYPE_INT .)
    $end            reduce using rule 10 (type -> COLON TYPE_INT .)
    LBRACE          reduce using rule 10 (type -> COLON TYPE_INT .)
    EQUALS          reduce using rule 10 (type -> COLON TYPE_INT .)


state 27

    (11) type -> COLON TYPE_FLOAT .

    COMMA           reduce using rule 11 (type -> COLON TYPE_FLOAT .)
    RPAREN          reduce using rule 11 (type -> COLON TYPE_FLOAT .)
    DECL            reduce using rule 11 (type -> COLON TYPE_FLOAT .)
    DEF             reduce using rule 11 (type -> COLON TYPE_FLOAT .)
    $end            reduce using rule 11 (type -> COLON TYPE_FLOAT .)
    LBRACE          reduce using rule 11 (type -> COLON TYPE_FLOAT .)
    EQUALS          reduce using rule 11 (type -> COLON TYPE_FLOAT .)


state 28

    (12) type -> COLON TYPE_VOID .

    COMMA           reduce using rule 12 (type -> COLON TYPE_VOID .)
    RPAREN          reduce using rule 12 (type -> COLON TYPE_VOID .)
    DECL            reduce using rule 12 (type -> COLON TYPE_VOID .)
    DEF             reduce using rule 12 (type -> COLON TYPE_VOID .)
    $end            reduce using rule 12 (type -> COLON TYPE_VOID .)
    LBRACE          reduce using rule 12 (type -> COLON TYPE_VOID .)
    EQUALS          reduce using rule 12 (type -> COLON TYPE_VOID .)


state 29

    (13) type -> COLON TYPE_STRING .

    COMMA           reduce using rule 13 (type -> COLON TYPE_STRING .)
    RPAREN          reduce using rule 13 (type -> COLON TYPE_STRING .)
    DECL            reduce using rule 13 (type -> COLON TYPE_STRING .)
    DEF             reduce using rule 13 (type -> COLON TYPE_STRING .)
    $end            reduce using rule 13 (type -> COLON TYPE_STRING .)
    LBRACE          reduce using rule 13 (type -> COLON TYPE_STRING .)
    EQUALS          reduce using rule 13 (type -> COLON TYPE_STRING .)


state 30

    (14) type -> COLON TYPE_BOOLEAN .

    COMMA           reduce using rule 14 (type -> COLON TYPE_BOOLEAN .)
    RPAREN          reduce using rule 14 (type -> COLON TYPE_BOOLEAN .)
    DECL            reduce using rule 14 (type -> COLON TYPE_BOOLEAN .)
    DEF             reduce using rule 14 (type -> COLON TYPE_BOOLEAN .)
    $end            reduce using rule 14 (type -> COLON TYPE_BOOLEAN .)
    LBRACE          reduce using rule 14 (type -> COLON TYPE_BOOLEAN .)
    EQUALS          reduce using rule 14 (type -> COLON TYPE_BOOLEAN .)


state 31

    (6) declaration -> DECL VARIABLE LPAREN arguments RPAREN type .

    DECL            reduce using rule 6 (declaration -> DECL VARIABLE LPAREN arguments RPAREN type .)
    DEF             reduce using rule 6 (declaration -> DECL VARIABLE LPAREN arguments RPAREN type .)
    $end            reduce using rule 6 (declaration -> DECL VARIABLE LPAREN arguments RPAREN type .)


state 32

    (7) declaration -> DECL VARIABLE LPAREN empty_args RPAREN type .

    DECL            reduce using rule 7 (declaration -> DECL VARIABLE LPAREN empty_args RPAREN type .)
    DEF             reduce using rule 7 (declaration -> DECL VARIABLE LPAREN empty_args RPAREN type .)
    $end            reduce using rule 7 (declaration -> DECL VARIABLE LPAREN empty_args RPAREN type .)


state 33

    (8) definition -> DEF VARIABLE LPAREN arguments RPAREN type . LBRACE def_block return RBRACE

    LBRACE          shift and go to state 36


state 34

    (9) definition -> DEF VARIABLE LPAREN empty_args RPAREN type . LBRACE def_block return RBRACE

    LBRACE          shift and go to state 37


state 35

    (23) args -> VARIABLE type COMMA args .

    RPAREN          reduce using rule 23 (args -> VARIABLE type COMMA args .)


state 36

    (8) definition -> DEF VARIABLE LPAREN arguments RPAREN type LBRACE . def_block return RBRACE
    (45) def_block -> . def_statments
    (46) def_block -> . empty
    (35) def_statments -> . def_stats
    (20) empty -> .
    (33) def_stats -> . def_statment
    (34) def_stats -> . def_statment def_stats
    (36) def_statment -> . statment_expression
    (37) def_statment -> . if
    (38) def_statment -> . while
    (39) def_statment -> . var_decl
    (40) def_statment -> . var_assign
    (41) def_statment -> . array_decl
    (42) def_statment -> . array_assign
    (57) statment_expression -> . expression SEMICOLON
    (58) if -> . IF expression block else
    (59) if -> . IF expression block empty
    (61) while -> . WHILE expression block
    (62) var_decl -> . VARIABLE type EQUALS expression SEMICOLON
    (64) var_assign -> . VARIABLE EQUALS expression SEMICOLON
    (63) array_decl -> . VARIABLE array_type SEMICOLON
    (65) array_assign -> . VARIABLE LBRACKET expression RBRACKET EQUALS expression SEMICOLON
    (66) expression -> . expression PLUS expression
    (67) expression -> . expression MINUS expression
    (68) expression -> . expression TIMES expression
    (69) expression -> . expression DIVIDE expression
    (70) expression -> . expression MOD expression
    (71) expression -> . expression AND expression
    (72) expression -> . expression OR expression
    (73) expression -> . expression EQUALS_EQUALS expression
    (74) expression -> . expression NOT_EQUALS expression
    (75) expression -> . expression GREATER expression
    (76) expression -> . expression LESS expression
    (77) expression -> . expression GREATER_EQUAL expression
    (78) expression -> . expression LESS_EQUAL expression
    (79) expression -> . MINUS expression
    (80) expression -> . LPAREN expression RPAREN
    (81) expression -> . FLOAT
    (82) expression -> . INT
    (83) expression -> . STRING
    (84) expression -> . VARIABLE
    (85) expression -> . TRUE
    (86) expression -> . FALSE
    (87) expression -> . NOT_UNARY expression
    (88) expression -> . VARIABLE LBRACKET expression RBRACKET
    (89) expression -> . GETARRAY LBRACKET expression RBRACKET
    (90) expression -> . VARIABLE LPAREN arguments_funinvocation RPAREN

    RETURN          reduce using rule 20 (empty -> .)
    IF              shift and go to state 53
    WHILE           shift and go to state 54
    VARIABLE        shift and go to state 38
    MINUS           shift and go to state 55
    LPAREN          shift and go to state 39
    FLOAT           shift and go to state 56
    INT             shift and go to state 57
    STRING          shift and go to state 58
    TRUE            shift and go to state 59
    FALSE           shift and go to state 60
    NOT_UNARY       shift and go to state 61
    GETARRAY        shift and go to state 62

    def_block                      shift and go to state 40
    def_statments                  shift and go to state 41
    empty                          shift and go to state 42
    def_stats                      shift and go to state 43
    def_statment                   shift and go to state 44
    statment_expression            shift and go to state 45
    if                             shift and go to state 46
    while                          shift and go to state 47
    var_decl                       shift and go to state 48
    var_assign                     shift and go to state 49
    array_decl                     shift and go to state 50
    array_assign                   shift and go to state 51
    expression                     shift and go to state 52

state 37

    (9) definition -> DEF VARIABLE LPAREN empty_args RPAREN type LBRACE . def_block return RBRACE
    (45) def_block -> . def_statments
    (46) def_block -> . empty
    (35) def_statments -> . def_stats
    (20) empty -> .
    (33) def_stats -> . def_statment
    (34) def_stats -> . def_statment def_stats
    (36) def_statment -> . statment_expression
    (37) def_statment -> . if
    (38) def_statment -> . while
    (39) def_statment -> . var_decl
    (40) def_statment -> . var_assign
    (41) def_statment -> . array_decl
    (42) def_statment -> . array_assign
    (57) statment_expression -> . expression SEMICOLON
    (58) if -> . IF expression block else
    (59) if -> . IF expression block empty
    (61) while -> . WHILE expression block
    (62) var_decl -> . VARIABLE type EQUALS expression SEMICOLON
    (64) var_assign -> . VARIABLE EQUALS expression SEMICOLON
    (63) array_decl -> . VARIABLE array_type SEMICOLON
    (65) array_assign -> . VARIABLE LBRACKET expression RBRACKET EQUALS expression SEMICOLON
    (66) expression -> . expression PLUS expression
    (67) expression -> . expression MINUS expression
    (68) expression -> . expression TIMES expression
    (69) expression -> . expression DIVIDE expression
    (70) expression -> . expression MOD expression
    (71) expression -> . expression AND expression
    (72) expression -> . expression OR expression
    (73) expression -> . expression EQUALS_EQUALS expression
    (74) expression -> . expression NOT_EQUALS expression
    (75) expression -> . expression GREATER expression
    (76) expression -> . expression LESS expression
    (77) expression -> . expression GREATER_EQUAL expression
    (78) expression -> . expression LESS_EQUAL expression
    (79) expression -> . MINUS expression
    (80) expression -> . LPAREN expression RPAREN
    (81) expression -> . FLOAT
    (82) expression -> . INT
    (83) expression -> . STRING
    (84) expression -> . VARIABLE
    (85) expression -> . TRUE
    (86) expression -> . FALSE
    (87) expression -> . NOT_UNARY expression
    (88) expression -> . VARIABLE LBRACKET expression RBRACKET
    (89) expression -> . GETARRAY LBRACKET expression RBRACKET
    (90) expression -> . VARIABLE LPAREN arguments_funinvocation RPAREN

    RETURN          reduce using rule 20 (empty -> .)
    IF              shift and go to state 53
    WHILE           shift and go to state 54
    VARIABLE        shift and go to state 38
    MINUS           shift and go to state 55
    LPAREN          shift and go to state 39
    FLOAT           shift and go to state 56
    INT             shift and go to state 57
    STRING          shift and go to state 58
    TRUE            shift and go to state 59
    FALSE           shift and go to state 60
    NOT_UNARY       shift and go to state 61
    GETARRAY        shift and go to state 62

    def_block                      shift and go to state 63
    def_statments                  shift and go to state 41
    empty                          shift and go to state 42
    def_stats                      shift and go to state 43
    def_statment                   shift and go to state 44
    statment_expression            shift and go to state 45
    if                             shift and go to state 46
    while                          shift and go to state 47
    var_decl                       shift and go to state 48
    var_assign                     shift and go to state 49
    array_decl                     shift and go to state 50
    array_assign                   shift and go to state 51
    expression                     shift and go to state 52

state 38

    (62) var_decl -> VARIABLE . type EQUALS expression SEMICOLON
    (64) var_assign -> VARIABLE . EQUALS expression SEMICOLON
    (63) array_decl -> VARIABLE . array_type SEMICOLON
    (65) array_assign -> VARIABLE . LBRACKET expression RBRACKET EQUALS expression SEMICOLON
    (84) expression -> VARIABLE .
    (88) expression -> VARIABLE . LBRACKET expression RBRACKET
    (90) expression -> VARIABLE . LPAREN arguments_funinvocation RPAREN
    (10) type -> . COLON TYPE_INT
    (11) type -> . COLON TYPE_FLOAT
    (12) type -> . COLON TYPE_VOID
    (13) type -> . COLON TYPE_STRING
    (14) type -> . COLON TYPE_BOOLEAN
    (15) array_type -> . COLON LBRACKET TYPE_INT RBRACKET
    (16) array_type -> . COLON LBRACKET TYPE_FLOAT RBRACKET
    (17) array_type -> . COLON LBRACKET TYPE_VOID RBRACKET
    (18) array_type -> . COLON LBRACKET TYPE_STRING RBRACKET
    (19) array_type -> . COLON LBRACKET TYPE_BOOLEAN RBRACKET

    EQUALS          shift and go to state 65
    LBRACKET        shift and go to state 67
    SEMICOLON       reduce using rule 84 (expression -> VARIABLE .)
    PLUS            reduce using rule 84 (expression -> VARIABLE .)
    MINUS           reduce using rule 84 (expression -> VARIABLE .)
    TIMES           reduce using rule 84 (expression -> VARIABLE .)
    DIVIDE          reduce using rule 84 (expression -> VARIABLE .)
    MOD             reduce using rule 84 (expression -> VARIABLE .)
    AND             reduce using rule 84 (expression -> VARIABLE .)
    OR              reduce using rule 84 (expression -> VARIABLE .)
    EQUALS_EQUALS   reduce using rule 84 (expression -> VARIABLE .)
    NOT_EQUALS      reduce using rule 84 (expression -> VARIABLE .)
    GREATER         reduce using rule 84 (expression -> VARIABLE .)
    LESS            reduce using rule 84 (expression -> VARIABLE .)
    GREATER_EQUAL   reduce using rule 84 (expression -> VARIABLE .)
    LESS_EQUAL      reduce using rule 84 (expression -> VARIABLE .)
    LPAREN          shift and go to state 68
    COLON           shift and go to state 69

    type                           shift and go to state 64
    array_type                     shift and go to state 66

state 39

    (80) expression -> LPAREN . expression RPAREN
    (66) expression -> . expression PLUS expression
    (67) expression -> . expression MINUS expression
    (68) expression -> . expression TIMES expression
    (69) expression -> . expression DIVIDE expression
    (70) expression -> . expression MOD expression
    (71) expression -> . expression AND expression
    (72) expression -> . expression OR expression
    (73) expression -> . expression EQUALS_EQUALS expression
    (74) expression -> . expression NOT_EQUALS expression
    (75) expression -> . expression GREATER expression
    (76) expression -> . expression LESS expression
    (77) expression -> . expression GREATER_EQUAL expression
    (78) expression -> . expression LESS_EQUAL expression
    (79) expression -> . MINUS expression
    (80) expression -> . LPAREN expression RPAREN
    (81) expression -> . FLOAT
    (82) expression -> . INT
    (83) expression -> . STRING
    (84) expression -> . VARIABLE
    (85) expression -> . TRUE
    (86) expression -> . FALSE
    (87) expression -> . NOT_UNARY expression
    (88) expression -> . VARIABLE LBRACKET expression RBRACKET
    (89) expression -> . GETARRAY LBRACKET expression RBRACKET
    (90) expression -> . VARIABLE LPAREN arguments_funinvocation RPAREN

    MINUS           shift and go to state 55
    LPAREN          shift and go to state 39
    FLOAT           shift and go to state 56
    INT             shift and go to state 57
    STRING          shift and go to state 58
    VARIABLE        shift and go to state 71
    TRUE            shift and go to state 59
    FALSE           shift and go to state 60
    NOT_UNARY       shift and go to state 61
    GETARRAY        shift and go to state 62

    expression                     shift and go to state 70

state 40

    (8) definition -> DEF VARIABLE LPAREN arguments RPAREN type LBRACE def_block . return RBRACE
    (55) return -> . RETURN empty_args SEMICOLON
    (56) return -> . RETURN expression SEMICOLON

    RETURN          shift and go to state 73

    return                         shift and go to state 72

state 41

    (45) def_block -> def_statments .

    RETURN          reduce using rule 45 (def_block -> def_statments .)


state 42

    (46) def_block -> empty .

    RETURN          reduce using rule 46 (def_block -> empty .)


state 43

    (35) def_statments -> def_stats .

    RETURN          reduce using rule 35 (def_statments -> def_stats .)


state 44

    (33) def_stats -> def_statment .
    (34) def_stats -> def_statment . def_stats
    (33) def_stats -> . def_statment
    (34) def_stats -> . def_statment def_stats
    (36) def_statment -> . statment_expression
    (37) def_statment -> . if
    (38) def_statment -> . while
    (39) def_statment -> . var_decl
    (40) def_statment -> . var_assign
    (41) def_statment -> . array_decl
    (42) def_statment -> . array_assign
    (57) statment_expression -> . expression SEMICOLON
    (58) if -> . IF expression block else
    (59) if -> . IF expression block empty
    (61) while -> . WHILE expression block
    (62) var_decl -> . VARIABLE type EQUALS expression SEMICOLON
    (64) var_assign -> . VARIABLE EQUALS expression SEMICOLON
    (63) array_decl -> . VARIABLE array_type SEMICOLON
    (65) array_assign -> . VARIABLE LBRACKET expression RBRACKET EQUALS expression SEMICOLON
    (66) expression -> . expression PLUS expression
    (67) expression -> . expression MINUS expression
    (68) expression -> . expression TIMES expression
    (69) expression -> . expression DIVIDE expression
    (70) expression -> . expression MOD expression
    (71) expression -> . expression AND expression
    (72) expression -> . expression OR expression
    (73) expression -> . expression EQUALS_EQUALS expression
    (74) expression -> . expression NOT_EQUALS expression
    (75) expression -> . expression GREATER expression
    (76) expression -> . expression LESS expression
    (77) expression -> . expression GREATER_EQUAL expression
    (78) expression -> . expression LESS_EQUAL expression
    (79) expression -> . MINUS expression
    (80) expression -> . LPAREN expression RPAREN
    (81) expression -> . FLOAT
    (82) expression -> . INT
    (83) expression -> . STRING
    (84) expression -> . VARIABLE
    (85) expression -> . TRUE
    (86) expression -> . FALSE
    (87) expression -> . NOT_UNARY expression
    (88) expression -> . VARIABLE LBRACKET expression RBRACKET
    (89) expression -> . GETARRAY LBRACKET expression RBRACKET
    (90) expression -> . VARIABLE LPAREN arguments_funinvocation RPAREN

    RETURN          reduce using rule 33 (def_stats -> def_statment .)
    IF              shift and go to state 53
    WHILE           shift and go to state 54
    VARIABLE        shift and go to state 38
    MINUS           shift and go to state 55
    LPAREN          shift and go to state 39
    FLOAT           shift and go to state 56
    INT             shift and go to state 57
    STRING          shift and go to state 58
    TRUE            shift and go to state 59
    FALSE           shift and go to state 60
    NOT_UNARY       shift and go to state 61
    GETARRAY        shift and go to state 62

    def_statment                   shift and go to state 44
    def_stats                      shift and go to state 74
    statment_expression            shift and go to state 45
    if                             shift and go to state 46
    while                          shift and go to state 47
    var_decl                       shift and go to state 48
    var_assign                     shift and go to state 49
    array_decl                     shift and go to state 50
    array_assign                   shift and go to state 51
    expression                     shift and go to state 52

state 45

    (36) def_statment -> statment_expression .

    IF              reduce using rule 36 (def_statment -> statment_expression .)
    WHILE           reduce using rule 36 (def_statment -> statment_expression .)
    VARIABLE        reduce using rule 36 (def_statment -> statment_expression .)
    MINUS           reduce using rule 36 (def_statment -> statment_expression .)
    LPAREN          reduce using rule 36 (def_statment -> statment_expression .)
    FLOAT           reduce using rule 36 (def_statment -> statment_expression .)
    INT             reduce using rule 36 (def_statment -> statment_expression .)
    STRING          reduce using rule 36 (def_statment -> statment_expression .)
    TRUE            reduce using rule 36 (def_statment -> statment_expression .)
    FALSE           reduce using rule 36 (def_statment -> statment_expression .)
    NOT_UNARY       reduce using rule 36 (def_statment -> statment_expression .)
    GETARRAY        reduce using rule 36 (def_statment -> statment_expression .)
    RETURN          reduce using rule 36 (def_statment -> statment_expression .)


state 46

